--- a/web/frontend/package.json
+++ b/web/frontend/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "zustand": "^4.5.0",
-    "wavesurfer.js": "^7.8.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+    "next": "^16.1.6",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
+    "tailwind-merge": "^2.2.0",
+    "wavesurfer.js": "^7.12.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.2.13",
+    "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
